--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,8 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - develop
+env:
+  REACT_APP_MY_VAR: ${{ vars.MY_VAR }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
