--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,6 +8,7 @@ name: Deploy to Firebase Hosting on merge
       - develop
 env:
   REACT_APP_MY_VAR: ${{ vars.MY_VAR }}
+  REACT_APP_MY_API_KEY: ${{ secrets.MY_API_KEY }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
